--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 gossip
 ======
 
-solutions to distributed system challenges @ https://fly.io/dist-sys/
+solutions to distributed systems challenges @ https://fly.io/dist-sys/
